     a shared postscript trailer, and then byte offsets 'start' and
     'end' to identify the postscript segment to use.
   Add 'static' to several C functions that did not need to be global.
   Fix bad memory accesses in DisposeObject() in z07.c.
   Fix the fatal error "AdjustSize: Up(x) == x!".
     Initialize column and row forward and back pointers
     in CopyObject() in z07.c, in insert_split() in z08.c,
     in MinSize() in z12.c, and in BreakObject() in z13.c.
     The original code did not take into account that rotations
     need both column and row pointers initialized.
     The uninitialized values would trigger an assert in AdjustSize()
     in z16.c. AdjustSize() now prints a warning instead of exiting
     in case the initializations did not completely solve the problem.
   Fix a bad memory access to kerned_glyphs[] in z14.c.
   Fix possible memory overwrite in prg2lout.c
   New files:
     .gitignore to keep generated files out of git
     updateversion.sh to update the version number in lout source files
     complout.bat unmaintained script to compile lout in a dos box
     makelout.bat unmaintained script to build lout using complout.bat
     instlout.bat unmaintained script to install lout in a dos box

Changes and new features introduced in Version 3.43 [Jan 2024]

   Apply ismaell's fix for crashes from calling catclose() with a bad argument
     when catopen() can't find the locale's message catalog.
   Fix compile warnings for both gcc 13 and clang 17.

Changes and new features introduced in Version 3.43.0 [Jan 2024]

   Compare patches by Matěj Cepl https://git.cepl.eu/cgit/toys/lout/ and Edinson E. Padrón Urdaneta

Changes and new features introduced in Version 3.43.1 [Feb 2025]

   Fix compile warnings for both gcc 14 and clang 19 including
     removing unused code and adding checks for NULL pointers.
   Add "make test" and "make testclean" to test lout with the user manual.

   William Bader